--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         After careful consideration and a generous grant from NASA, our team has determined that a woodchuck could chuck five wood, with a standard deviation of +/- .37 wood.
       </p>
       <footer>posted by Chuck Wooden</footer>
+      <form id="newComment" onSubmit="addComment()">
+        Add comment: <input type="text" id="commentText">
+        <br>
+        Your Name: <input type="text" id="commenterName">
+        <br>
+        <input type="submit">
+      </form>
+      <div id="comments">
+        <h3>Comments</h3>
+      </div>
     </article>
   </body>
 </html>
